Fixing a shit ton of warning / code style and stuff (code inspector from IDEA)